--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
 	"name": "Blossom",
-	"version": "0.0.1",
-	"description": "",
+	"version": "0.0.5",
+	"description": "The official styleguide for Blossom UI",
 	"main": "index.js",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Aotik/Blossom-Styleguide.git"
+	},
 	"scripts": {
 		"start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
 		"start:dev": "webpack-dev-server --inline --content-base public/ --history-api-fallback",
@@ -11,9 +15,19 @@
 		"build:server": "webpack --config webpack.server.config.js",
 		"build": "npm run build:client && npm run build:server"
 	},
-	"author": "Stefan Mansson",
+	"keywords": [
+		"blossom",
+		"framework",
+		"ui",
+		"css",
+		"stylus",
+		"responsive"
+	],
+	"author": "Stefan Mansson <st.mansson@icloud.com> (http://aotik.io)",
 	"license": "MIT",
+	"homepage": "http://getblossom.io",
 	"dependencies": {
+		"blossom-ui": "^0.1.0",
 		"compression": "^1.6.2",
 		"express": "^4.14.0",
 		"if-env": "^1.0.0",
