--- a/package.json
+++ b/package.json
@@ -1,57 +1,57 @@
 {
-  "name": "Blossom",
-  "version": "0.0.6",
-  "description": "The official styleguide for Blossom UI",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Aotik/Blossom-Styleguide.git"
-  },
-  "scripts": {
-    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
-    "start:dev": "webpack-dev-server --hot --inline --progress --colors",
-    "start:prod": "npm run build && node server.bundle.js",
-    "build:client": "webpack",
-    "build:server": "webpack -p --config webpack.server.config.js --define process.env.NODE_ENV='production'",
-    "build": "npm run build:client && npm run build:server"
-  },
-  "keywords": [
-    "blossom",
-    "framework",
-    "ui",
-    "css",
-    "stylus",
-    "responsive"
-  ],
-  "author": "Stefan Mansson <st.mansson@icloud.com> (http://aotik.io)",
-  "license": "MIT",
-  "homepage": "http://getblossom.io",
-  "dependencies": {
-    "blossom-ui": "^0.1.3",
-    "compression": "^1.6.2",
-    "express": "^4.14.0",
-    "if-env": "^1.0.0",
-    "react": "0.14.7",
-    "react-dom": "0.14.7",
-    "react-highlight": "^0.8.0",
-    "react-router": "2.0.0"
-  },
-  "devDependencies": {
-    "babel-core": "^6.5.1",
-    "babel-loader": "^6.2.2",
-    "babel-preset-es2015": "^6.5.0",
-    "babel-preset-react": "^6.5.0",
-    "css-loader": "^0.27.3",
-    "http-server": "^0.8.5",
-    "image-webpack-loader": "^3.2.0",
-    "jeet": "^6.1.1",
-    "nib": "^1.1.2",
-    "react-hot-loader": "^1.3.1",
-    "rupture": "^0.6.2",
-    "style-loader": "^0.16.0",
-    "stylus": "^0.54.5",
-    "stylus-loader": "^3.0.1",
-    "webpack": "^1.12.13",
-    "webpack-dev-server": "^1.14.1"
-  }
+	"name": "Blossom",
+	"version": "1.0.7",
+	"description": "The official styleguide for Blossom UI",
+	"main": "index.js",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/Aotik/Blossom-Styleguide.git"
+	},
+	"scripts": {
+		"start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+		"start:dev": "webpack-dev-server --hot --inline --progress --colors",
+		"start:prod": "npm run build && node server.bundle.js",
+		"build:client": "webpack",
+		"build:server": "webpack -p --config webpack.server.config.js --define process.env.NODE_ENV='production'",
+		"build": "npm run build:client && npm run build:server"
+	},
+	"keywords": [
+		"blossom",
+		"framework",
+		"ui",
+		"css",
+		"stylus",
+		"responsive"
+	],
+	"author": "Stefan Mansson <st.mansson@icloud.com> (http://cindr.io)",
+	"license": "MIT",
+	"homepage": "http://getblossom.io",
+	"dependencies": {
+		"blossom-ui": "^0.1.3",
+		"compression": "^1.6.2",
+		"express": "^4.14.0",
+		"if-env": "^1.0.0",
+		"react": "0.14.7",
+		"react-dom": "0.14.7",
+		"react-highlight": "^0.8.0",
+		"react-router": "2.0.0"
+	},
+	"devDependencies": {
+		"babel-core": "^6.5.1",
+		"babel-loader": "^6.2.2",
+		"babel-preset-es2015": "^6.5.0",
+		"babel-preset-react": "^6.5.0",
+		"css-loader": "^0.27.3",
+		"http-server": "^0.8.5",
+		"image-webpack-loader": "^3.2.0",
+		"jeet": "^6.1.1",
+		"nib": "^1.1.2",
+		"react-hot-loader": "^1.3.1",
+		"rupture": "^0.6.2",
+		"style-loader": "^0.16.0",
+		"stylus": "^0.54.5",
+		"stylus-loader": "^3.0.1",
+		"webpack": "^1.12.13",
+		"webpack-dev-server": "^1.14.1"
+	}
 }
