--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "Blossom",
-	"version": "1.2.2",
+	"version": "1.2.61",
 	"description": "The official styleguide for Blossom UI",
 	"main": "index.js",
 	"repository": {
@@ -23,11 +23,10 @@
 		"stylus",
 		"responsive"
 	],
-	"author": "Stefan Mansson <st.mansson@icloud.com> (http://cindr.io)",
+	"author": "Stefan Mansson <st.mansson@icloud.com> (https://cindr.io)",
 	"license": "MIT",
 	"homepage": "http://getblossom.io",
 	"dependencies": {
-		"blossom-ui": "^0.1.3",
 		"compression": "^1.6.2",
 		"express": "^4.14.0",
 		"if-env": "^1.0.0",
