--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "webpack-dev-server --hot --inline --progress --colors --host 0.0.0.0 --port 4000",
-    "prod": "webpack -p --config webpack.prod.config.js --define process.env.NODE_ENV='production'"
+    "prod": "webpack -p --config webpack.prod.config.js"
   },
   "author": "Stefan Mansson <mansson.io>",
   "license": "MIT",
