--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "Blossom-Styleguide",
-  "version": "1.5.0",
+  "version": "1.6.0",
   "description": "The official styleguide for Blossom UI",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/aotik/Blossom-Styleguide.git"
+    "url": "git+https://github.com/animify/Blossom-Styleguide.git"
   },
   "scripts": {
-    "dev": "webpack-dev-server --hot --inline --progress --colors --host 0.0.0.0 --port 4000",
+    "start": "webpack-dev-server --hot --inline --progress --colors --host 0.0.0.0 --port 4000",
     "prod": "webpack -p --config webpack.prod.config.js"
   },
   "author": "Stefan Mansson <mansson.io>",
